deployment/k8s/ok/ok.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ok
spec:
  selector:
    matchLabels:
      app: ok
  replicas: 1
  template:
    metadata:
      labels:
        app: ok
    spec:
      containers:
      - name: ok
        image: 198760508209.dkr.ecr.eu-west-3.amazonaws.com/ok:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
      imagePullSecrets:
        - name: reg-aws
