deployment/k8s/ok/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ok
spec:
  type: NodePort
  selector:
    app: ok
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 30001 
    protocol: TCP
