deployment/k8s/ok/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ok
spec:
  rules:
    - host: hello.ok.com 
      http:
        paths:
        - pathType: Prefix
          path: /ok
          backend:
            service:
              name: ok
              port:
                number: 8081
  ingressClassName: nginx
